force-app/main/default/objects/Lilly_Payment__c/fields/Lilly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>