force-app/main/default/objects/Lilly_Payment__c/fields/Lilly_Associated_Drug__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Associated_Drug__c</fullName>
    <label>Associated Drug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>