force-app/main/default/objects/Lilly_Payment__c/fields/Lilly_H1_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_Payment_Id__c</fullName>
    <externalId>true</externalId>
    <label>H1 Payment</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>