force-app/main/default/objects/Lilly_Payment__c/fields/Lilly_Nature_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Nature_Of_Payment__c</fullName>
    <label>Nature Of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>