force-app/main/default/objects/Lilly_Payment__c/fields/Lilly_Payer_Company__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Payer_Company__c</fullName>
    <label>Payer Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>