force-app/main/default/objects/Lilly_Payment__c/fields/Lilly_Payer_Country__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Payer_Country__c</fullName>
    <label>Payer Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>