force-app/main/default/objects/Lilly_Payment__c/fields/Lilly_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>