force-app/main/default/objects/Lilly_Payment__c/fields/Lilly_Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Payment_Form__c</fullName>
    <label>Payment Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>