force-app/main/default/objects/Lilly_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lilly_H1_Payment_Id__c</columns>
    <columns>Lilly_Payer_Company__c</columns>
    <columns>Lilly_Payer_Country__c</columns>
    <columns>Lilly_Amount__c</columns>
    <columns>Lilly_Payment_Date__c</columns>
    <columns>Lilly_Payment_Form__c</columns>
    <columns>Lilly_Nature_Of_Payment__c</columns>
    <columns>Lilly_Associated_Drug__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>